--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@
     line-height: 1.6; 
   }
   
-  #tech, #technology {
+  #tech, #technology, #project, #contact {
     text-align: center; 
     color: #333;
   }
@@ -171,5 +171,58 @@
     border-radius: 50%;
   }
   
+  /* Projects */
+  .projects {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 20px;
+  }
   
+  .project-card {
+    flex: 0 0 calc(100% - 20px); 
+    margin: 10px;
+    padding: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    text-align: center;
+    text-decoration: none;
+  }
   
+  .project-card img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px;
+  }
+  
+  .project-card h3 {
+    margin: 10px 0 5px;
+    color: #333;
+  }
+  
+  .project-card p {
+    margin: 0;
+    color: #555;
+  }
+  
+  /* Contact */
+  .contact-social {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 20px;
+  }
+  
+  .contact-social > div {
+    flex: 0 0 calc(10% - 20px); 
+    margin: 10px;
+    overflow: hidden; 
+    border-radius: 50%;
+  }
+  
+  .contact-social a img{
+    display: block;
+    width: 100%;
+    height: auto;
+    border-radius: 50%;
+  }
